# mongomasker-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mongomasker_cli/: main.py
tests/: test_anonymize_data.py
